video-extract/api/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-extract-backend
  namespace: default
spec:
  selector:
    matchLabels:
      app: video-extract-backend
  template:
    metadata:
      labels:
        app: video-extract-backend
    spec:
      containers:
      - name: video-extract-backend
        image: myawesomeapps/video-extract-api:1.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8000
