video-extract/api/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-extract-backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    name: backend-ingress
spec:
  tls:
    - hosts:
      - "api.video-extract.awesomeapps.cloud"
      secretName: "video-extract-backend-tls"
  rules:
  - host: api.video-extract.awesomeapps.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: video-extract-backend-svc
            port:
              number: 80
